create Vue instance and connect to DOM

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    // Connected to Vue instance, through element property
+    <div id="app">
+        <h1>{{ product }}</h1> // Pulls from Vue instance data using expression
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="app.js"></script>
 </body>
