--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
                 <div class="product-image">
                     <!-- Creates a bond between the data and the attribute -->
                     <img v-bind:src="image">
+                    <a :href="link">View Image</a>
                 </div>                
                 
                 <div class="product-info">
                     <!-- Pulls from Vue instance data using expression -->
                     <h1>{{ product }}</h1> 
+                    <p>{{ description }}</p>
                 </div>
             
             </div>
