--- a/index.html
+++ b/index.html
@@ -26,6 +26,38 @@
                     <!-- Pulls from Vue instance data using expression -->
                     <h1>{{ product }}</h1> 
                     <p>{{ description }}</p>
+                    <!-- unlike v-if, v-show toggles visiblity off and on -->
+                    <!-- v-if removes or adds element, not as efficient -->
+                    <p v-show="inStock">In Stock</p>
+                    <p :class="{ outOfStock: !inStock }">Out of Stock</p>
+                    <span v-if="onSale">On Sale!</span>
+
+                    <!-- v-for can be used to iterate over an array to display data -->
+                    <ul>
+                        <li v-for="detail in details">{{ detail }}</li>
+                    </ul>
+
+                    <!-- When using v-for it's recommended to give each rendered element it's own unique key. -->
+                    <div v-for="variant in variants" 
+                    :key="variant.variantId"
+                    class="color-box"
+                    :style="{ backgroundColor: variant.variantColor }"
+                    @mouseover="updateProduct(variant.variantImage)">
+                    </div>
+
+                    <ul>
+                        <li v-for="size in sizes">{{ size }}</li>
+                    </ul>
+
+                    <button v-on:click="addToCart" 
+                    :disabled="!inStock"
+                    :class="{ disabledButton: !inStock }">Add to cart</button>
+                    <button v-on:click="removeFromCart">Remove from cart</button>
+
+                    <div class="cart">
+                        <p>Cart({{ cart }})</p>
+                    </div>
+
                 </div>
             
             </div>
