--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 
         <!-- Connected to Vue instance, through element property -->
         <div id="app">
-            <product :premium="premium"></product>
+
+            <div class="cart">
+                <p>Cart({{ cart.length }})</p>
+            </div>
+
+            <product :premium="premium" @add-to-cart="updateCart" @remove-from-cart="subtractCart"></product>
         </div>
     
     </div>
